--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
                         <h3>Off-white section</h3>
                         <p>this will have off white color</p>
                     </section>
+                    <hr>
+                    <div>Just making a change and checking weather pushing Directly deploys website</div>
             <hr>
                 <h2>@footer tag</h2>
                     <footer>
