wip: HTML done, CSS coming up..

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <p>this will have off white color</p>
                     </section>
                     <hr>
-                    <div>Just making a change and checking weather pushing Directly deploys website</div>
+                    <div>Just making a change and checking weather pushing Directly deploys website from VSC</div>
             <hr>
                 <h2>@footer tag</h2>
                     <footer>
