--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>this is the ruff outline from html, we can consider them as library then take each of the small parts and do make-up (CSS), that's  it our website is ready.
         </p>
     <h1>Welcome to h1 header Biggest text </h1>
-    <p>Im attending online live class of Tanay Pratap</p>
+    <p>Im attending online live class of Tanay Pratap and my name is Girish</p>
 
     <hr>
     <h2>@typography used h2 tag</h2>
