--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=, initial-scale=1. 0">
     <title>someTitle</title>
 </head>
-
+<link rel="stylesheet" href="styles.css">
 <body>
-    <h1>component Libray</h1>
+    <h1 clas>component Libray</h1>
     <p>this is the ruff outline from html, we can consider them as library then take each of the small parts and do make-up (CSS), that's  it our website is ready.
         </p>
     <hr>
     <h1>Welcome to h1 header Biggest text </h1>
     <p>Im attending online live class of Tanay Pratap and my name is Girish</p>
+    <p>this text has <strong>bold</strong> text</p>
 
     <hr>
     <h2>@typography used h2 tag</h2>
@@ -22,40 +23,40 @@
     <small>this is the smaller words by using small tag </small>
     <hr>
     <h2>@fluid container </h3>
-        <div>this is a normal fluid container </div>
+        <div >this is a normal fluid container </div>
         <h2>@centre container </h3>
             <div>this is a centre container </div>
             <hr>
             <h2>@using anchor tag by a tag</h3>
-                <a href="">Primary link</a> 
-                <a href="">Secondary link</a>
+                <a href="/">Primary link</a> 
+                <a href="/">Secondary link</a>
                 <hr>
                 <h2>@list </h2>
                 List are of two types ordered and unordered
-                <ul> This is unordered
-                    <li>item one</li>
-                    <li>itwm two</li>
-                    <li>item three</li>
+                <ul > <p>This is unordered </p>
+                    <li >item one</li>
+                    <li >item two</li>
+                    <li >item three</li>
                 </ul>
 
-                <ol> This is ordered List
+                <ol reversed> This is ordered List
                     <li>first item</li>
                     <li>second item</li>
                     <li>third item</li>
                 </ol>
                 <hr>
                 <h2>@nav tag usage</h2>
-                <nav>
-                    <div>ThisIsBrandName</div>
-                    <ul>
-                        <a href="/">
-                            <li>Home</li>
+                <nav class="nav ">
+                    <div class="nav-font"><span>  ThisIsBrandName </span></div>
+                    <ul class="nav nav-list ">
+                        <a href="/"  class="nav-decoration">
+                            <li class="nav nav-list-display">Home</li>
                         </a>
-                        <a href="/">
-                            <li>Products</li>
+                        <a href="/" class="nav-decoration">
+                            <li class="nav nav-list-display">Products</li>
                         </a>
-                        <a href="/">
-                            <li>About us</li>
+                        <a href="/"  class="nav-decoration ">
+                            <li class="nav nav-list-display">About us</li>
                         </a>
                     </ul>
 
